# machine-setup

./: .pre-commit-config.yaml  README.md  cgpt-bundler.sh  pyproject.toml  requirements.txt  research.md  setup-machine.sh  setup_machine.py
.github/workflows/: quality.yml
lib/: cloud-init.sh  colors.sh  constants.py  docker.sh  executor.py  github-deploy-key.sh  hwga.sh  logger.py  logging.sh  packages.sh  platform.sh  platform_utils.py  pseudohome.sh  python.sh  repo-helper.sh  sshkeys.sh  sudoers.sh  system-repos.sh  tailscale.sh  tweaks.sh  update-packages.sh  users.sh  virtmachine.sh  vscode.sh
lib/helpers/: colors.sh  debug.sh  flags.sh  logging.sh  python.sh  repo-helper.sh  safe-commands.sh  users.sh
lib/helpers-extra/: apt-behaviour.sh  root-cmd.sh
lib/installer_utils/: apt_tools.py  brew_tools.py  git_tools.py  module_docker.py  module_fake_le.py  module_firewall.py  module_no2id.py  module_ollama.py  module_personal_repos.py  module_pseudohome.py  module_wolfcraig.py  packages.py  python_mgmt.py  repo_utils.py  ssh_utils.py  tailscale.py  tweaks.py  user_mgmt.py  virtmachine.py  vscode.py
lib/installers/: docker.sh  github-deploy-key.sh  hwga.sh  packages.sh  pseudohome.sh  python.sh  system-repos.sh  tailscale.sh  tweaks.sh  update-packages.sh  vscode.sh
tools/: apt-cleanup.sh  env-generator.py  firewall-rules.py  get-netblocks  github-deploy-key.py  ollama-open-terminal.sh
